Fix jumping-button-syndrome in IE7. Ref #158.

--- a/app/assets/stylesheets/pages/_root.sass
+++ b/app/assets/stylesheets/pages/_root.sass
@@ -70,15 +70,14 @@
 
   section.buttons
     border-bottom: 1px solid #ccc
-    height: 0px
-    margin: 50px 0
+    margin: 35px 0
     text-align: center
 
     a.launch
       box-shadow: inset 0 1px 0 #56a2e4, rgba(black, 0.3) 0px 1px 3px, 0 0 0 10px white
       display: inline-block
       font-size: 14px
-      margin: -21px 10px 10px
+      margin: 0 10px -22px
       padding: 12px 48px
       vertical-align: middle
 
